--- a/templates/login_form.html
+++ b/templates/login_form.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
-<form>
-    Username:<br>
-    <input type="text" name="username"><br>
-    Password:<br>
-    <input type="text" name="password">
+<form action="/login" method="POST">
+    <div class="container">
+        <label for="uname"><b>Username</b></label>
+        <input type="text" placeholder="Enter Username" name="uname" required>
+
+        <label for="psw"><b>Password</b></label>
+        <input type="password" placeholder="Enter Password" name="psw" required>
+
+        <button type="submit">Login</button>
+        <label>
+            <input type="checkbox" checked="checked" name="remember"> Remember me
+        </label>
+    </div>
 </form>
