--- a/flaskr/templates/blog/index.html
+++ b/flaskr/templates/blog/index.html
@@ -13,10 +13,10 @@
       <header>
         <div>
           <h1>{{ post['title'] }}</h1>
-          <div class="about">by {{ post['username'] }} on {{ post['created'].strftime('%Y-%m-%d') }}</div>
+          <div class="about">by {{ post.author['username'] }} on {{ post['created'].strftime('%Y-%m-%d') }}</div>
         </div>
-        {% if g.user['id'] == post['author_id'] %}
-          <a class="action" href="{{ url_for('blog.update', id=post['id']) }}">Edit</a>
+        {% if g.user['_id'] == post.author['_id'] %}
+          <a class="action" href="{{ url_for('blog.update', id=post['post_id']) }}">Edit</a>
         {% endif %}
       </header>
       <p class="body">{{ post['body'] }}</p>
